--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"lucide": "^0.460.0",
 		"markdown-it": "^14.1.0",
 		"postcss": "^8.4.49",
+		"shiki": "^1.23.1",
 		"tailwindcss": "^3.4.15",
 		"vite": "^5.4.11"
 	},
